--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,42 @@
-httplib2==0.22.0
 aiogram==2.25.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==3.7.1
+async-timeout==4.0.3
 asyncpg==0.29.0
+attrs==23.2.0
+Babel==2.9.1
+beautifulsoup4==4.12.3
+certifi==2024.6.2
+chardet==3.0.4
+charset-normalizer==3.3.2
+deep-translator==1.11.4
+exceptiongroup==1.2.1
+frozenlist==1.4.1
+googletrans==3.0.0
+h11==0.12.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.6.1
+httpcore==0.13.7
+httplib2==0.22.0
+httpx==0.20.0
+hyperframe==5.2.0
+idna==2.10
+magic-filter==1.0.12
+multidict==6.0.5
+packaging==24.0
+pydantic==2.7.3
+pydantic_core==2.18.4
+pyparsing==3.1.2
 python-dotenv==1.0.1
-replicate~=0.26.0
-googletrans~=3.0.0
+pytz==2024.1
+replicate==0.26.0
+requests==2.32.3
+rfc3986==1.5.0
+sniffio==1.3.1
+soupsieve==2.5
+typing_extensions==4.12.2
+urllib3==2.2.1
+yarl==1.9.4
