--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Specify the Python version you are using
+        python-version: '3.10' # Specify the Python version you are using
 
     - name: Install dependencies
       run: |
@@ -53,9 +53,8 @@ jobs:
       env:
         SERVER_HOST: ${{ secrets.SERVER_HOST }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
-        SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
       run: |
-        echo "$SERVER_SSH_KEY" > deploy_key.pem
-        chmod 600 deploy_key.pem
-        scp -i deploy_key.pem -r $(git ls-files --exclude-standard -co) $SERVER_USER@$SERVER_HOST:literate-waffle/
-        ssh -i deploy_key.pem $SERVER_USER@$SERVER_HOST 'bash /literate-waffle/deploy/deploy.sh'
+        sshpass -p "$SERVER_PASSWORD" scp -r $(git ls-files --exclude-standard -co) $SERVER_USER@$SERVER_HOST:/path/to/remote/directory/
+        sshpass -p "$SERVER_PASSWORD" ssh $SERVER_USER@$SERVER_HOST 'bash /path/to/remote/directory/deploy.sh'
+   
