--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,8 +49,9 @@ jobs:
       env:
         SERVER_HOST: ${{ secrets.SERVER_HOST }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
-        SERVER_PASSWORD: ${{ secrets.SERVER_PASS }}
+        SERVER_PASS: ${{ secrets.SERVER_PASS }}
       run: |
-        sshpass -p "$SERVER_PASSWORD" scp -r $(git ls-files --exclude-standard -co) $SERVER_USER@$SERVER_HOST:/path/to/remote/directory/
-        sshpass -p "$SERVER_PASSWORD" ssh $SERVER_USER@$SERVER_HOST 'bash /path/to/remote/directory/deploy.sh'
+        sshpass -p "$SERVER_PASS" scp -o StrictHostKeyChecking=no -r $(git ls-files --exclude-standard -co) $SERVER_USER@$SERVER_HOST:/literate-waffle/
+        sshpass -p "$SERVER_PASS" ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST 'bash /literate-waffle/deploy/deploy.sh'
+
    
