--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,7 @@ jobs:
         SERVER_USER: ${{ secrets.SERVER_USER }}
         SERVER_PASS: ${{ secrets.SERVER_PASS }}
       run: |
-        sshpass -p "$SERVER_PASS" scp -o StrictHostKeyChecking=no -r $(git pull) $SERVER_USER@$SERVER_HOST:literate-waffle/
+#        sshpass -p "$SERVER_PASS" scp -o StrictHostKeyChecking=no -r $(git pull) $SERVER_USER@$SERVER_HOST:literate-waffle/
         sshpass -p "$SERVER_PASS" ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST 'bash literate-waffle/deploy/deploy.sh'
 
    
