--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: "3.9"
 
 services:
-
-  fastapi:
+  tg-bot:
     build:
       context: .
       dockerfile: Dockerfile
-    network_mode: "host"
-    restart: unless-stopped
+    env_file:
+      - .env
+    restart: always
+    volumes:
+      - ./logs:/app/logs  # Optional: Map logs directory for persistence
