--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
-    restart: always
     volumes:
       - ./logs:/app/logs  # Optional: Map logs directory for persistence
+    network_mode: "host"
+    restart: unless-stopped
